# gst-plugins-bad

./: configure.ac
ext/: Makefile.am
ext/freenect2/: Makefile.am  gstfreenect2.cpp  gstfreenect2src.cpp  gstfreenect2src.h
ext/gl/: Makefile.am  gltestsrc.c  gltestsrc.h  gstglimagesink.c  gstglimagesink.h  gstgltestsrc.c  gstgltestsrc.h  gstgltransformation.c  gstgltransformation.h  gstopengl.c  shaders.c
ext/gl/glsl/: checkers.frag  color.frag  mandelbrot.frag  mandelbrot.vert  shaders.gresource.xml  snow.frag  snow.vert  uv.vert
ext/vrsink/: Makefile.am  gstvr.c  gstvrsink.c  gstvrsink.h
gst-libs/gst/gl/: Makefile.am  gstglcolorconvert.c  gstglcolorconvert.h  gstglcontext.c  gstglcontext.h  gstglformat.c  gstglmemory.h  gstglshader.c  gstglupload.c
gst-libs/gst/gl/egl/: gstglcontext_egl.c
gst-libs/gst/gl/x11/: gstglcontext_glx.c  gstglwindow_x11.c  gstglwindow_x11.h
gst/coloreffects/: Makefile.am  gstchannelextract.c  gstchannelextract.h  gstplugin.c
